@@ -1,3 +1,7 @@
+lldpd (1.0.5)
+  * Changes:
+    + Add support for VLAN-aware bridges for Linux (no range support).
+
 lldpd (1.0.4)
   * Changes:
     + Add "configure system max-neighbors XX" command to modify maximum
